Bug 973384 - Call |cb| before WebVTTListener::AsyncOnChannelRedirect returns. r=rillian a=jcristau

MozReview-Commit-ID: 32nXdFpgCjg